[gd_scene load_steps=5 format=3 uid="uid://doxr5ti5rl2ly"]

[ext_resource type="PackedScene" uid="uid://b2ndbkv4et6g1" path="res://ui/overlays/base_overlay/base_overlay.tscn" id="1_gyle5"]
[ext_resource type="Script" uid="uid://dj646wgg7me6v" path="res://ui/overlays/result_overlay/result_overlay.gd" id="2_v81mq"]
[ext_resource type="PackedScene" uid="uid://ccr3drqhqhsnj" path="res://ui/components/objectives/objectives_container.tscn" id="3_erdco"]
[ext_resource type="PackedScene" uid="uid://byocrfp5gbeii" path="res://ui/overlays/base_overlay/base_section/base_section.tscn" id="3_v81mq"]

[node name="ResultOverlay" instance=ExtResource("1_gyle5")]
script = ExtResource("2_v81mq")

[node name="RootSection" parent="PanelContainer/SectionsContainer" index="0"]
back_button_label = "RETURN"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/SectionsContainer/RootSection" index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer" index="0"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "VICTORY!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="StarsLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "STARS: 3/3"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "SCORE: X POINTS"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer/VBoxContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "TIME: 0:00"
horizontal_alignment = 1

[node name="RewardLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"GoldLabel"
text = "EARNED: 100,000 $"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection/PanelContainer/VBoxContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "FIRST TIME BONUS!"
horizontal_alignment = 1

[node name="ObjectivesButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "OBJECTIVES"

[node name="RetryButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "RETRY LEVEL"

[node name="ObjectivesSection" parent="PanelContainer/SectionsContainer" index="1" instance=ExtResource("3_v81mq")]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/SectionsContainer/ObjectivesSection" index="0"]
layout_mode = 2
text = "OBJECTIVES"
horizontal_alignment = 1

[node name="ObjectivesContainer" parent="PanelContainer/SectionsContainer/ObjectivesSection" index="1" instance=ExtResource("3_erdco")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
